[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "source-quickbooks-drivepoint"
version = "0.1.0"
license = "MIT"
readme = "README.md"
description = "Source implementation for QuickBooks Reporting API for Drivepoint"
authors = ["andrey@drivepoint.io"]
repository = "https://github.com/airbytehq/airbyte"
packages = [{include = "source_quickbooks_drivepoint"}]

[tool.poetry.scripts]
source-quickbooks-drivepoint = "source_quickbooks_drivepoint.run:run"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
airbyte-cdk = "^6"
pendulum = "^3.0.0"
firebase-admin = "^7.1.0"
google-cloud-secret-manager = "^2.24.0"

[tool.poetry.group.dev.dependencies]
requests-mock = "^1"
pytest = "^8.0.0"
pytest-mock = "^3.6.1"
freezegun = "^1.5.5"